# markdown-chunkify

./: README.md  pyproject.toml
.github/worflows/: tests.yaml
markdown_chunkify/: __init__.py
markdown_chunkify/components/: normalizers.py  parsers.py  processors.py  splitters.py
markdown_chunkify/core/: interfaces.py  models.py  settings.py
markdown_chunkify/core/prompt_templates/: unicode_replace.txt
markdown_chunkify/utils/: parsers.py  splitters.py
src/utils/: splitters.py
tests/: conftest.py  test_splitters.py
