[project]
name = "embed"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
packages = [{include = "src"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pymupdf4llm (>=0.0.17,<0.0.18)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = ">=5.13.2,<6.0.0"
ruff = ">=0.9.3,<0.10.0"
ipykernel = ">=6.29.5,<7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"