[project]
name = "markdown-chunkify"
version = "0.1"
description = "A Python package containing utilities for processing Markdowns."
authors = [
    {name = "Gal Gilor", email = "gilorgal2010@gmail.com"}
]
packages = [{include = "markdown_chunkify"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["pytest-cov (>=6.0.0,<7.0.0)"]

[project.urls]
Github = "https://github.com/Gal-Gilor/markdown-chunkify"
Issues = "https://github.com/Gal-Gilor/markdown-chunkify/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = ">=5.13.2,<6.0.0"
ruff = ">=0.9.3,<0.10.0"
ipykernel = ">=6.29.5,<7.0.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"